--- a/index.html
+++ b/index.html
@@ -8,18 +8,20 @@
     <link rel="stylesheet" href="./scss/main.css">
 </head>
 <body>
-    <h1 id="title">Tic-Tac-Toe</h1>
-    <div class="hero_start"><button id="start_game">Start Game!</button></div>
+    <div id="title">
+        <h1>Tic-Tac-Toe</h1>
+    </div>
+  
     <div id="buttonvs">
         <h2 id="question_oponnent">Who is gonna be your opponent?</h2>
         <button id="vs_ai"><img src="https://img.icons8.com/fluency-systems-regular/48/000000/bot.png"/>AI</button>
         <button id="vs_player"><img src="https://img.icons8.com/windows/32/000000/user.png"/>Player</button>
     </div>
-    <div class="gameplay">
-        <div class="player_1_side">
-            <img src="" alt="">
-            <h2 class="name_player_1"></h2>
-            <div class="tic_tac_toe">
+    <div id="gameplay">
+        <div id="player_1_side">
+            <img src="https://img.icons8.com/windows/32/000000/user.png" alt="">
+            <h2 id="name_player_1">Player 1</h2>
+            <div id="game_board">
                 <div class="box" data-index ="0"></div>
                 <div class="box" data-index ="1"></div>
                 <div class="box" data-index ="2"></div>
@@ -30,9 +32,18 @@
                 <div class="box" data-index ="7"></div>
                 <div class="box" data-index ="8"></div>
             </div>
+            <div id="player_2_side">
+                <img src="https://img.icons8.com/windows/32/000000/user.png" alt="">
+                <h2 id="name_player_2">Player 2</h2>
+            </div>
+            <div id="ai_side">
+                <img src="https://img.icons8.com/fluency-systems-regular/48/000000/bot.png" alt="">
+                <h2 id="name_ai">AI</h2>
+            </div>
         </div>
     </div>
     <footer>
+        <span>This is a project from <a href="https://www.theodinproject.com/home">The Odin Project</a> course</span> <br>
         <span>Alex Srebernic 2021©</span>
         <div class="svgs">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/></svg>
