--- a/index.html
+++ b/index.html
@@ -8,46 +8,64 @@
     <link rel="stylesheet" href="./scss/main.css">
 </head>
 <body>
-    <div id="title">
+    <div id="start_game">
         <h1>Tic-Tac-Toe</h1>
+            <button id="start_game_button">Start Game!</button>
     </div>
   
     <div id="buttonvs">
-        <h2 id="question_oponnent">Who is gonna be your opponent?</h2>
-        <button id="vs_ai"><img src="https://img.icons8.com/fluency-systems-regular/48/000000/bot.png"/>AI</button>
-        <button id="vs_player"><img src="https://img.icons8.com/windows/32/000000/user.png"/>Player</button>
+        <h2 id="question_opponent">Who will be your opponent?</h2>
+        <div id="buttons">
+        <button id="vs_ai">AI</button>
+        <button id="vs_player">Player</button>
+    </div>
     </div>
     <div id="gameplay">
         <div id="player_1_side">
-            <img src="https://img.icons8.com/windows/32/000000/user.png" alt="">
+            <span class="sign" id="sign_player_1">X</span>
             <h2 id="name_player_1">Player 1</h2>
-            <div id="game_board">
-                <div class="box" data-index ="0"></div>
-                <div class="box" data-index ="1"></div>
-                <div class="box" data-index ="2"></div>
-                <div class="box" data-index ="3"></div>
-                <div class="box" data-index ="4"></div>
-                <div class="box" data-index ="5"></div>
+            <div id="wins_player1"></div>
+        </div>
+            <div id="game">
+            <p id="player_x_turn_text"></p>
+
+                <div id="gameboard">
+                <div class="box" data-index ="0">X</div>
+                <div class="box" data-index ="1">X</div>
+                <div class="box" data-index ="2">X</div>
+                <div class="box" data-index ="3">X</div>
+                <div class="box" data-index ="4">X</div>
+                <div class="box" data-index ="5">X</div>
                 <div class="box" data-index ="6"></div>
                 <div class="box" data-index ="7"></div>
                 <div class="box" data-index ="8"></div>
+                </div>
+                <div id="buttons_options">
+                <button id="restart_button">Restart</button>
+                <button id="change_opponent_button">Change opponent</button>
+            </div>
             </div>
             <div id="player_2_side">
-                <img src="https://img.icons8.com/windows/32/000000/user.png" alt="">
+                <span class="sign" id="sign_player_2">O</span>
                 <h2 id="name_player_2">Player 2</h2>
+                <div id="wins_player2"></div>
             </div>
             <div id="ai_side">
-                <img src="https://img.icons8.com/fluency-systems-regular/48/000000/bot.png" alt="">
+
+                <span class="sign" id="sign_ai">O</span>
+
                 <h2 id="name_ai">AI</h2>
+                <div id="wins_ai"></div>
             </div>
-        </div>
     </div>
     <footer>
         <span>This is a project from <a href="https://www.theodinproject.com/home">The Odin Project</a> course</span> <br>
         <span>Alex Srebernic 2021©</span>
         <div class="svgs">
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/></svg>
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/></svg>
+            <a href="https://www.linkedin.com/in/alex-srebernic-201427213/">  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12 2c5.514 0 10 4.486 10 10s-4.486 10-10 10-10-4.486-10-10 4.486-10 10-10zm0-2c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm-2 8c0 .557-.447 1.008-1 1.008s-1-.45-1-1.008c0-.557.447-1.008 1-1.008s1 .452 1 1.008zm0 2h-2v6h2v-6zm3 0h-2v6h2v-2.861c0-1.722 2.002-1.881 2.002 0v2.861h1.998v-3.359c0-3.284-3.128-3.164-4-1.548v-1.093z"/></svg></a>
+            <a href="https://github.com/alexsrebernic"> <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/></svg></a>
+           
+         
         </div>
     </footer>
     <script src="app.js"></script>
